--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="description" content="Donald Trump personal website">
-    <meta name="keywords" content="Trump, Trump's resume, Trump's resume ">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <meta name="description" content="Donald Trump personal website" />
+    <meta name="keywords" content="Trump, Trump's resume, Trump's resume " />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <link rel="stylesheet" href="https://volodymyrkushnir.com/assets/stylesheets/base.css" />
 
     <title>Donald Trump résumé</title>
@@ -15,7 +15,46 @@
     <main>
       <article>
         <div class="page" style="border-color: midnightblue;">
-          <!-- Content -->
+          <div class="stackable grid">
+            <div class="row">
+              <div class="three wide center aligned column">
+                <!-- Avatar -->
+              </div>
+              <div class="thirteen wide column">
+                <div class="stackable grid">
+                  <div class="sixteen wide column">
+                    <!-- Name, job, contacts -->
+                  </div>
+                  <div class="sixteen wide mobile only column">
+                    <div class="divider"></div>
+                  </div>
+                  <div class="sixteen wide column">
+                    <!-- Intro -->
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="sixteen wide column">
+                <div class="fat divider"></div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="ten wide column">
+                <!-- Experience -->
+              </div>
+              <div class="six wide column">
+                <!-- Languages -->
+                <!-- Skills -->
+                <!-- Character -->
+                <!-- Likes -->
+                <!-- Dislikes -->
+                <!-- Wants -->
+                <!-- Education -->
+                <!-- Articles -->
+              </div>
+            </div>
+          </div>
         </div>
       </article>
     </main>
