--- a/index.html
+++ b/index.html
@@ -1,62 +1,70 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <meta name="description" content="Donald Trump personal website" />
-    <meta name="keywords" content="Trump, Trump's resume, Trump's resume " />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link rel="stylesheet" href="https://volodymyrkushnir.com/assets/stylesheets/base.css" />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="x-ua-compatible" content="ie=edge" />
+  <meta name="description" content="Donald Trump personal website" />
+  <meta name="keywords" content="Trump, Trump's resume, Trump's resume " />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Donald Trump résumé</title>
-  </head>
-  <body>
-    <main>
-      <article>
-        <div class="page" style="border-color: midnightblue;">
-          <div class="stackable grid">
-            <div class="row">
-              <div class="three wide center aligned column">
-                <!-- Avatar -->
-              </div>
-              <div class="thirteen wide column">
-                <div class="stackable grid">
-                  <div class="sixteen wide column">
-                    <!-- Name, job, contacts -->
-                  </div>
-                  <div class="sixteen wide mobile only column">
-                    <div class="divider"></div>
-                  </div>
-                  <div class="sixteen wide column">
-                    <!-- Intro -->
-                  </div>
+  <link rel="stylesheet" href="https://volodymyrkushnir.com/assets/stylesheets/base.css" />
+
+  <title>Donald Trump résumé</title>
+</head>
+
+<body>
+  <main>
+    <article>
+      <div class="page" style="border-color: midnightblue;">
+        <div class="stackable grid">
+          <div class="row">
+            <div class="three wide center aligned column">
+              <!-- Avatar -->
+            </div>
+            <div class="thirteen wide column">
+              <div class="stackable grid">
+                <div class="sixteen wide column">
+                  <!-- Name, job, contacts -->
+                </div>
+                <div class="sixteen wide mobile only column">
+                  <div class="divider"></div>
+                </div>
+                <div class="sixteen wide column">
+                  <h2>Résumé</h2>
+                  <p>&mdash; I'm the most successful person ever to run for the presidency, by far. Nobody's ever been
+                    more successful than me. I'm the most successful person ever to run. Ross Perot isn't successful
+                    like me. Romney ― I have a Gucci store that's worth more than Romney. Sorry losers and haters, but
+                    my IQ is one of the highest ― and you all know it! Please don't feel so stupid or insecure, it's not
+                    your fault.</p>
                 </div>
               </div>
             </div>
-            <div class="row">
-              <div class="sixteen wide column">
-                <div class="fat divider"></div>
-              </div>
+          </div>
+          <div class="row">
+            <div class="sixteen wide column">
+              <div class="fat divider"></div>
             </div>
-            <div class="row">
-              <div class="ten wide column">
-                <!-- Experience -->
-              </div>
-              <div class="six wide column">
-                <!-- Languages -->
-                <!-- Skills -->
-                <!-- Character -->
-                <!-- Likes -->
-                <!-- Dislikes -->
-                <!-- Wants -->
-                <!-- Education -->
-                <!-- Articles -->
-              </div>
+          </div>
+          <div class="row">
+            <div class="ten wide column">
+              <!-- Experience -->
+            </div>
+            <div class="six wide column">
+              <!-- Languages -->
+              <!-- Skills -->
+              <!-- Character -->
+              <!-- Likes -->
+              <!-- Dislikes -->
+              <!-- Wants -->
+              <!-- Education -->
+              <!-- Articles -->
             </div>
           </div>
         </div>
-      </article>
-    </main>
-  </body>
+      </div>
+    </article>
+  </main>
+</body>
+
 </html>
