--- a/index.html
+++ b/index.html
@@ -18,10 +18,16 @@
     <article>
       <div class="page" style="border-color: midnightblue;">
         <div class="stackable grid">
+          <!-- primary content (e.g. avatar, name, job, contacts, intro, etc.) -->
           <div class="row">
+            <!-- Avatar -->
             <div class="three wide center aligned column">
-              <!-- Avatar -->
+              <div class="avatar-wrapper">
+                <object class="avatar" data="./assets/images/avatar.jpg" role="img"
+                  aria-label="My profile picture"></object>
+              </div>
             </div>
+            <!-- Name, job -->
             <div class="thirteen wide column">
               <div class="stackable grid">
                 <div class="sixteen wide column">
@@ -78,40 +84,152 @@
                     </li>
                   </ul>
                 </div>
-              </div>
-              <div class="sixteen wide mobile only column">
-                <div class="divider"></div>
-              </div>
-              <div class="sixteen wide column">
-                <h2>Résumé</h2>
-                <p>&mdash; Hello! I'm a beginner frontend developer and a person motivated to reach my goals and get a
-                  job in a creative and challenging scope that will enable me to gain valuable experience and improve
-                  WEB development skills.</p>
+                <div class="sixteen wide mobile only column">
+                  <div class="divider"></div>
+                </div>
+                <!-- Intro-->
+                <div class="sixteen wide column">
+                  <h1>RÉSUMÉ</h1>
+                  <p> &mdash; Hello! I'm a beginner frontend developer and a person motivated to reach my goals and get
+                    valuable experience in WEB development skills for further.
+                  </p>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="sixteen wide column">
-            <div class="fat divider"></div>
+          <div class="row">
+            <div class="sixteen wide column">
+              <div class="fat divider"></div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="ten wide column">
+              <!-- Experience -->
+              <h3>Experience</h3>
+              <h6>Recent</h6>
+              <li class="highlighted">
+                <p><em>14<sup>th</sup> January 2019 – present</em></p>
+                <p><strong>QA Engineer</strong> at <strong><a href="https://jbwsoft.com/" rel="external">JBW
+                      Soft</a></strong><br></p>
+                <ul>
+                  <li class="details">
+                    <input type="checkbox" id="project-2">
+                    <label for="project-2" class="summary">manual testing web sites and web aplication, regression
+                      testing, stress testing, automated testing</label>
+                    <div class="labels">
+                      <div class="label">Redmine</div>
+                      <div class="label">Google Developers Tools</div>
+                      <div class="label">HTTP protocol</div>
+                      <div class="label">HTML</div>
+                      <div class="label">CSS</div>
+                      <div class="label">JavaScript</div>
+                      <div class="label">Java</div>
+                      <div class="label">JMeter</div>
+                      <div class="label">Selenium WebDriver</div>
+                    </div>
+                  </li>
+                  <li>working with documentation, support and development of testing processes on the projects</li>
+                </ul>
+              </li>
+              <h6>Back then</h6>
+              <ul class="timeline">
+                <li>
+                  <p><em>15<sup>st</sup> June 2018 &ndash; 11<sup>st</sup> November 2018</em></p>
+                  <p>Cook at <strong><a href="https://www.facebook.com/holybrgr/" rel="external">Holy
+                        Burger</a></strong></p>
+                </li>
+                <li>
+                  <p><em>28<sup>st</sup> October 2016 &ndash; 24<sup>st</sup> April 2018</em></p>
+                  <p>Regular service in the<strong><a href="http://www.mil.gov.ua/ministry" rel="external"> Armed forces
+                        of Ukraine</a></strong></p>
+                </li>
+                <li>
+                  <p><em>Some time in August 2018</em></p>
+                  <p>Listen to the music and had cool time at<strong><a href="https://zaxidfest.com/" rel="external">
+                        ZAXIDFEST</a></strong></p>
+                </li>
+                <li>
+                  <p><em>Some time in November 2015</em></p>
+                  <p>Bought electric guitar<strong> Squire by Fender</strong><button id="guitar" class="audio"><svg
+                        class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
+                        <path
+                          d="M576 256c0 100.586-53.229 189.576-134.123 239.04-7.532 4.606-17.385 2.241-21.997-5.304-4.609-7.539-2.235-17.388 5.304-21.997C496.549 424.101 544 345.467 544 256c0-89.468-47.452-168.101-118.816-211.739-7.539-4.609-9.913-14.458-5.304-21.997 4.608-7.539 14.456-9.914 21.997-5.304C522.77 66.424 576 155.413 576 256zm-96 0c0-66.099-34.976-124.572-88.133-157.079-7.538-4.611-17.388-2.235-21.997 5.302-4.61 7.539-2.236 17.388 5.302 21.998C418.902 152.963 448 201.134 448 256c0 54.872-29.103 103.04-72.828 129.779-7.538 4.61-9.912 14.459-5.302 21.998 4.611 7.541 14.462 9.911 21.997 5.302C445.024 380.572 480 322.099 480 256zm-138.14-75.117c-7.538-4.615-17.388-2.239-21.998 5.297-4.612 7.537-2.241 17.387 5.297 21.998C341.966 218.462 352 236.34 352 256s-10.034 37.538-26.841 47.822c-7.538 4.611-9.909 14.461-5.297 21.998 4.611 7.538 14.463 9.909 21.998 5.297C368.247 314.972 384 286.891 384 256s-15.753-58.972-42.14-75.117zM256 88.017v335.964c0 21.436-25.942 31.999-40.971 16.971L126.059 352H24c-13.255 0-24-10.745-24-24V184c0-13.255 10.745-24 24-24h102.059l88.971-88.954C230.037 56.038 256 66.551 256 88.017zm-32 19.311l-77.659 77.644A24.001 24.001 0 0 1 129.372 192H32v128h97.372a24.001 24.001 0 0 1 16.969 7.028L224 404.67V107.328z" />
+                      </svg> guitar sound
+                      <audio preload="none">
+                        <source src="./assets/sounds/Guitar.mp3" type="audio/mpeg">
+                      </audio>
+                    </button></p>
+                </li>
+                <li>
+                  <p><em>15<sup>th</sup> August 2004</em></p>
+                  <p>Relocated to <strong><a
+                        href="https://www.google.com/maps/place/%D0%91%D1%96%D0%BB%D0%B0+%D0%A6%D0%B5%D1%80%D0%BA%D0%B2%D0%B0,+%D0%9A%D0%B8%D1%97%D0%B2%D1%81%D1%8C%D0%BA%D0%B0+%D0%BE%D0%B1%D0%BB.,+09100/@49.8056147,30.0519455,12z/data=!3m1!4b1!4m5!3m4!1s0x40d3423e37227b9d:0x84e311f8582cc6e8!8m2!3d49.7967977!4d30.1310853?hl=uk"
+                        rel="external">Bila Tserkva</a></strong></p>
+                </li>
+                <li>
+                  <p><em>8<sup>th</sup> February 1994</em></p>
+                  <p>Born in<strong><a
+                        href="https://www.google.com/maps/place/%D0%A0%D1%96%D0%B2%D0%BD%D0%B5,+%D0%A0%D1%96%D0%B2%D0%BD%D0%B5%D0%BD%D1%81%D1%8C%D0%BA%D0%B0+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C/@50.6111564,26.1745432,12z/data=!3m1!4b1!4m5!3m4!1s0x472f6caa2d7c89d7:0x27481abdbc4e484!8m2!3d50.6199!4d26.251617?hl=uk"
+                        rel="external"> Rivne, Ukraine</a></strong></p>
+                </li>
+              </ul>
+            </div>
+            <!-- secondary content (e.g. languages, skills, character, etc.) -->
+            <div class="six wide column">
+              <!-- Languages -->
+              <section>
+                <h3>Languages</h3>
+                <p class="tags small"><span class="language" lang="uk">&#x1F1FA;&#x1F1E6; УКРАЇНСЬКА </span><span
+                    class="language" lang="ru">&#x1f1f7;&#x1f1fa; РУССКИЙ </span> <span class="language"
+                    lang="en">&#x1f1fa;&#x1f1f8; ENGLISH: pre-intermediate</span></p>
+              </section>
+              <!-- Skills -->
+              <section>
+                <h3>Skills</h3>
+                <p class="tags small">HTML CSS JS PHOTOSHOP WINDOWS SQL MICROSOFT OFFICE JMETER SELENIUM WEBDRIVER JAVA
+                </p>
+              </section>
+              <!-- Character -->
+              <section>
+                <h3>Character</h3>
+                <p class="tags small">STRAIGHTFORWARD DEVOTED PROCRASTINATOR MELANCHOLIC CALM EMPATHETIC </p>
+              </section>
+              <!-- Likes -->
+              <section>
+                <h3>Likes&#x1f603;</h3>
+                <p class="tags small">SUNSET STORM ENCELADUS SPACE CATS CS50 MOUNTAINS 60S BEATNICS READING
+                  CHARMOLINE-TEA SOCIAL-DRAMA RUN SCI-FI PATIENCE DEMOCRACY GRUNGE </p>
+              </section>
+              <!-- Dislikes -->
+              <section>
+                <h3>Dislikes&#x1f61e;</h3>
+                <p class="tags small"> RACISM ASS-KISSERS INCOMPETENCE ARROGANCE ENVY PREJUDICE</p>
+              </section>
+              <!-- Wants -->
+              <section>
+                <h3>Wants&#x1f97a;</h3>
+                <p class="tags small bulleted"><span class="tag">TO BE FIT AND HEALTHY</span><span class="tag">TO READ
+                    MORE</span><span class="tag">TO LISTEN AND LEARN</span></p>
+              </section>
+              <!-- Education -->
+              <section>
+                <h3>Education</h3>
+                <ul class="timeline">
+                  <li>
+                    <div><em>1<sup>st</sup> September 2016 &ndash; 28<sup>th</sup> February 2019</em></div>
+                    <div><strong>Master's degree</strong> in <strong>Tourism</strong> at <a href="https://nuft.edu.ua/"
+                        rel="external"><strong>National University of Food Techlogies</strong></a></div>
+                  </li>
+                  <li>
+                    <div><em>1<sup>st</sup> September 2004 &ndash; 30<sup>st</sup> May 2011</em></div>
+                    <div><strong>Certificate of graduation</strong> at <strong>№6 Middle School of General Education in
+                        Bila Tserkva</strong></div>
+                  </li>
+                </ul>
+              </section>
+            </div>
           </div>
         </div>
-        <div class="row">
-          <div class="ten wide column">
-
-          </div>
-          <div class="six wide column">
-            <!-- Languages -->
-            <!-- Skills -->
-            <!-- Character -->
-            <!-- Likes -->
-            <!-- Dislikes -->
-            <!-- Wants -->
-            <!-- Education -->
-            <!-- Articles -->
-          </div>
-        </div>
-      </div>
       </div>
     </article>
   </main>
