Fix meta tags and title

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
-  <meta name="description" content="Donald Trump personal website" />
-  <meta name="keywords" content="Trump, Trump's resume, Trump's resume " />
+  <meta name="description" content="Vitalii Kozakevych personal website" />
+  <meta name="keywords" content="vitalii kozakevych,vitalii kozakevych resume,  " />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <link rel="stylesheet" href="https://volodymyrkushnir.com/assets/stylesheets/base.css" />
 
-  <title>Donald Trump résumé</title>
+  <title>Personal résumé</title>
 </head>
 
 <body>
