Add footer tag with customer content

--- a/index.html
+++ b/index.html
@@ -226,6 +226,11 @@
       </div>
     </article>
   </main>
+  <footer>
+    <em>HERE MUST BE A NICE FOOTER, BUT SOMETHING WRONG...<a class="linkgame" href="http://googledino.ru/uk/"
+        target="_blank" id="dinosaur"><img width="80px" height="40px" src="./assets/images/dinosaur.jpg"
+          alt="dinosaur"></a></em>
+  </footer>
 </body>
 
 </html>
