Add index.js script to body

--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
         target="_blank" id="dinosaur"><img width="80px" height="40px" src="./assets/images/dinosaur.jpg"
           alt="dinosaur"></a></em>
   </footer>
+  <script type="text/javascript" src="js/index.js"></script>
 </body>
 
 </html>
