Add media css property to contacts block

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <link rel="stylesheet" href="https://volodymyrkushnir.com/assets/stylesheets/base.css" />
+  <link rel="stylesheet" href="css/index.css" />
 
   <title>Personal résumé</title>
 </head>
@@ -27,7 +28,7 @@
                   <h1 class="name">Vitaliy Kozakevich</h1>
                   <div class="job">QA engineer</div>
                   <!-- Contacts -->
-                  <ul class="contacts">
+                  <ul class="contacts contacts-flex">
                     <li>
                       <a href="https://www.facebook.com/profile.php?id=100017323050434" rel="author" class="facebook">
                         <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
