update intro content

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div class="sixteen wide column">
                   <h1>RÉSUMÉ</h1>
                   <p> &mdash; Hello! I'm a beginner frontend developer and a person motivated to reach my goals and get
-                    valuable experience in WEB development skills for further.
+                    valuable experience in WEB development skills for further growing.
                   </p>
                 </div>
               </div>
